--- a/songbird/assets/css/style.css
+++ b/songbird/assets/css/style.css
@@ -1,3 +1,4 @@
+@import '../libs/animate.min.css';
 @font-face {
   font-family: Reaver;
   src: url(../font/Reaver.woff);
@@ -267,4 +268,22 @@ a:active {
   .promo__descr {
     font-size: 19px;
   }
+}
+.game {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+.game__bg-img, .game__bg-img-fire {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100vh;
+  z-index: -2;
+  opacity: 0.7;
+}
+.game__bg-img-fire {
+  position: absolute;
+  left: 0;
+  z-index: -1;
 }
