--- a/songbird/assets/css/style.css
+++ b/songbird/assets/css/style.css
@@ -269,10 +269,11 @@ a:active {
     font-size: 19px;
   }
 }
-.game {
+.game__bg {
+  position: absolute;
+  z-index: -1;
   width: 100%;
   height: 100vh;
-  position: relative;
 }
 .game__bg-img, .game__bg-img-fire {
   -o-object-fit: cover;
@@ -286,4 +287,132 @@ a:active {
   position: absolute;
   left: 0;
   z-index: -1;
+}
+
+.header__wrapper {
+  height: 110px;
+  padding: 20px 0;
+  font-size: 24px;
+  font-family: "Reaver", serif;
+  font-weight: 600;
+  letter-spacing: 3px;
+  color: #fff;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__logo-with-lang {
+  display: flex;
+  align-items: center;
+  column-gap: 50px;
+}
+.header__btn {
+  border: 3px solid rgba(255, 255, 255, 0.3137254902);
+  padding: 15px 25px;
+  border-radius: 5px;
+  cursor: pointer;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  transition-duration: 0.2s;
+  opacity: 0.8;
+}
+.header__btn:hover {
+  border: 3px solid #ff6046;
+  margin-top: -2px;
+  opacity: 1;
+}
+.header__btn-inner-text {
+  font-family: radiance;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #fff;
+}
+.header__btn-inner-text img {
+  padding: 0 2px 4px 2px;
+  width: 27px;
+  height: 27px;
+}
+.logo {
+  opacity: 0.8;
+  transition: 0.2s;
+}
+.logo__wrapper {
+  display: flex;
+  column-gap: 10px;
+  align-items: center;
+}
+.logo__image {
+  width: 50px;
+  height: 50px;
+}
+.logo__image img {
+  width: 100%;
+  height: 100%;
+}
+.logo__title {
+  font-size: 30px;
+  text-transform: uppercase;
+  color: #ff6046;
+  text-shadow: 1px 1px 8px #ff6046;
+}
+.logo:hover {
+  opacity: 1;
+}
+
+.language {
+  cursor: pointer;
+  transition-duration: 0.2s;
+  opacity: 0.8;
+}
+.language__wrapper {
+  display: flex;
+  column-gap: 6px;
+}
+.language:hover {
+  opacity: 1;
+}
+
+.pagination__wrapper {
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+}
+.pagination__bg {
+  background: rgba(37, 40, 46, 0.71);
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
+  border-radius: 4px;
+}
+.pagination__item {
+  list-style: none;
+  padding: 15px 25px;
+  border-radius: 5px;
+  cursor: pointer;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  transition-duration: 0.2s;
+  opacity: 0.8;
+}
+.pagination__item_active {
+  border: 2px solid;
+}
+.pagination__link {
+  font-family: radiance;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #fff;
+  text-shadow: 0px 0px 10px #427ed1, 0px 0px 10px #427ed1;
 }
