--- a/songbird/assets/css/style.css
+++ b/songbird/assets/css/style.css
@@ -136,6 +136,144 @@ a:active {
   background: #767474;
 }
 
+.audio-player {
+  height: 60px;
+  border: none;
+  width: 100%;
+  color: white;
+  font-size: 0.75em;
+  overflow: hidden;
+  display: grid;
+  grid-template-rows: 6px auto;
+}
+.audio-player .timeline {
+  background: white;
+  width: 100%;
+  position: relative;
+  cursor: pointer;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5333333333);
+}
+.audio-player .timeline .progress {
+  background: #ff6046;
+  box-shadow: 0px 0px 10px #ff6046, 0px 0px 10px #ff6046;
+  width: 0%;
+  height: 100%;
+  transition: 0.25s;
+}
+.audio-player .controls {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  padding: 0 20px;
+  padding-top: 20px;
+}
+.audio-player .controls > * {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.audio-player .controls .toggle-play.play {
+  cursor: pointer;
+  position: relative;
+  left: 0;
+  height: 0;
+  width: 0;
+  border: 7px solid rgba(0, 0, 0, 0);
+  border-left: 13px solid white;
+}
+.audio-player .controls .toggle-play.play:hover {
+  transform: scale(1.1);
+}
+.audio-player .controls .toggle-play.pause {
+  height: 15px;
+  width: 20px;
+  cursor: pointer;
+  position: relative;
+}
+.audio-player .controls .toggle-play.pause:before {
+  position: absolute;
+  top: 0;
+  left: 0px;
+  background: white;
+  content: "";
+  height: 15px;
+  width: 3px;
+}
+.audio-player .controls .toggle-play.pause:after {
+  position: absolute;
+  top: 0;
+  right: 8px;
+  background: white;
+  content: "";
+  height: 15px;
+  width: 3px;
+}
+.audio-player .controls .toggle-play.pause:hover {
+  transform: scale(1.1);
+}
+.audio-player .controls .time {
+  display: flex;
+}
+.audio-player .controls .time > * {
+  padding: 2px;
+}
+.audio-player .controls .volume-container {
+  cursor: pointer;
+  position: relative;
+  z-index: 2;
+}
+.audio-player .controls .volume-container .volume-button {
+  height: 26px;
+  display: flex;
+  align-items: center;
+}
+.audio-player .controls .volume-container .icono-volumeMedium {
+  width: 20px;
+  height: 20px;
+  position: relative;
+}
+.audio-player .controls .volume-container .icono-volumeMedium::before {
+  content: "";
+  background: url(./../icons/volume-on.svg);
+  width: 22px;
+  position: absolute;
+  height: 22px;
+  z-index: 10;
+}
+.audio-player .controls .volume-container .icono-volumeMute {
+  width: 20px;
+  height: 20px;
+  position: relative;
+}
+.audio-player .controls .volume-container .icono-volumeMute::before {
+  content: "";
+  background: url(./../icons/volume-off.svg);
+  width: 22px;
+  position: absolute;
+  height: 22px;
+  z-index: 10;
+}
+.audio-player .controls .volume-container .volume-slider {
+  position: absolute;
+  left: -3px;
+  top: 10px;
+  z-index: -1;
+  width: 0;
+  height: 15px;
+  background: white;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.6666666667);
+  transition: 0.25s;
+}
+.audio-player .controls .volume-container .volume-slider .volume-percentage {
+  background: #ff6046;
+  height: 100%;
+  width: 75%;
+}
+.audio-player .controls .volume-container:hover .volume-slider {
+  left: -125px;
+  width: 120px;
+}
+
 .body {
   background: #000;
   cursor: default;
@@ -415,4 +553,44 @@ a:active {
   text-transform: uppercase;
   color: #fff;
   text-shadow: 0px 0px 10px #427ed1, 0px 0px 10px #427ed1;
+}
+
+.jumbotron__wrapper {
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
+  padding: 15px;
+  margin-top: 20px;
+  background: rgba(37, 40, 46, 0.71);
+  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
+  border-radius: 4px;
+}
+.jumbotron__img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 120px;
+  width: 120px;
+  border-radius: 4px;
+  border: 2px solid white;
+}
+.jumbotron__img img {
+  background: rgba(255, 255, 255, 0.6117647059);
+  width: 100%;
+  height: 100%;
+}
+.jumbotron__player {
+  flex: auto;
+}
+.jumbotron__title {
+  font-family: radiance;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #fff;
+  text-shadow: 0px 0px 10px #427ed1, 0px 0px 10px #427ed1;
+}
+.jumbotron__divider {
+  padding: 5px;
 }
