--- a/songbird/assets/css/style.css
+++ b/songbird/assets/css/style.css
@@ -378,6 +378,9 @@ a:active {
   font-weight: 100;
   font-family: radiance;
 }
+.promo__descr span {
+  font-family: radiance;
+}
 .promo__btn {
   border: 3px solid rgba(255, 255, 255, 0.3137254902);
   padding: 15px 25px;
@@ -634,6 +637,14 @@ a:active {
   width: 27px;
   height: 27px;
 }
+.header__btn-inner-text span {
+  font-family: radiance;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #fff;
+}
 .logo {
   opacity: 0.8;
   transition: 0.2s;
@@ -662,16 +673,50 @@ a:active {
 }
 
 .language {
+  position: relative;
   cursor: pointer;
   transition-duration: 0.2s;
   opacity: 0.8;
+  z-index: 1;
 }
 .language__wrapper {
   display: flex;
   column-gap: 6px;
+  align-items: center;
+}
+.language__title {
+  text-transform: uppercase;
+  font-size: 15px;
+  padding-top: 4px;
+}
+.language__variants {
+  display: none;
+  width: 100px;
+  position: absolute;
+  border: 2px solid;
+  background: #25282e;
+  border-radius: 4px;
+  column-gap: 10px;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.67);
+}
+.language__variants :first-child {
+  border-bottom: 1px solid #494949;
+}
+.language__item {
+  text-transform: uppercase;
+  font-size: 17px;
+  padding: 8px 10px;
+}
+.language__item:hover {
+  text-shadow: 0px 0px 10px #427ed1, 0px 0px 10px #427ed1;
 }
 .language:hover {
   opacity: 1;
+}
+.language:hover .language__variants {
+  display: flex;
 }
 
 @media (max-width: 639px) {
@@ -860,7 +905,7 @@ a:active {
 .details__instruction {
   display: block;
 }
-.details__instruction-text, .details__instruction-title {
+.details__instruction-text, .details__instruction-title, .details__instruction-descr {
   font-family: radiance;
   font-size: 16px;
   font-weight: 700;
